# kbzv

./: .gitignore  AGENTS.md  README.md  components.json  index.html  package.json  pnpm-lock.yaml  skills-lock.json  vite.config.ts
.github/: copilot-instructions.md
.kbz/: config.yaml
.kbz/cache/: kbz.db  kbz.db-shm  kbz.db-wal
.kbz/index/: graph.yaml
.playwright-mcp/: page-2026-03-31T12-05-50-446Z.yml  page-2026-03-31T12-07-21-991Z.yml  page-2026-03-31T13-14-52-183Z.yml  page-2026-03-31T13-17-37-734Z.yml
.zed/: settings.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: kbz-fs.toml  validate-project.toml
src-tauri/src/: lib.rs  main.rs
src/styles/: globals.css  markdown.css
src/views/: BugsView.tsx  WorkflowsView.tsx
work/: README.md
work/design/: f1-app-scaffold-theme.md  f2-data-layer.md  f3-workflows-view.md  f4-documents-view.md  f5-cross-view-navigation.md  f6-file-watching-git-status.md  kbzv-architecture.md
work/dev/: f1-app-scaffold-theme-dev-plan.md  f2-data-layer-dev-plan.md  f3-workflows-view-dev-plan.md  f4-documents-view-dev-plan.md  f5-cross-view-navigation-dev-plan.md  f6-file-watching-git-status-dev-plan.md
work/plan/: kbz-references  kbzv-initial-proposal.md  kbzv-v1-dev-plan.md
work/review/: UI Feedback #1.txt  UI Feedback #2.txt  UI feedback #3.txt
work/spec/: f1-app-scaffold-theme-spec.md  f2-data-layer-spec.md  f3-workflows-view-spec.md  f4-documents-view-spec.md  f5-cross-view-navigation-spec.md  (+1 more)
(+266 files in other folders)
