[package]
name = "kbzv"
version = "0.1.0"
description = "Kanbanzai Viewer"
authors = [""]
edition = "2021"

[lib]
name = "kbzv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
